tests/invalid/function/reserved_synthetic_function_name.facet
fn __facet_local_rec_0_f() -> unrestricted isize {
  0
}

fn main() -> unrestricted isize {
  (__facet_local_rec_0_f)
}
